# bifrost-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  something_else.yml
configs/mainnet/: bifrost-node.service.endpoint.example  bifrost-node.service.validator.example
configs/testnet/: bifrost-node.service.endpoint.example  bifrost-node.service.validator.example
deploy/mainnet/: bifrost-node.service.endpoint.example  bifrost-node.service.validator.example
deploy/testnet/: bifrost-node.service.endpoint.example  bifrost-node.service.validator.example
maintenance/: docker-compose.yml
maintenance/alertmanager/: alertmanager.yml
maintenance/prometheus/: prometheus.yml  rules.yml
node/common/: Cargo.toml
node/common/src/: cli_opt.rs  lib.rs  rpc.rs  service.rs  tracing.rs
node/core/: Cargo.toml
node/core/src/: cli.rs  command.rs  main.rs
node/dev/: Cargo.toml
node/dev/src/: chain_spec.rs  rpc.rs  service.rs
node/mainnet/: Cargo.toml
node/mainnet/src/: chain_spec.rs  lib.rs  rpc.rs  service.rs  test_accounts.rs
node/testnet/: Cargo.toml
node/testnet/src/: block_validator.rs  chain_spec.rs  lib.rs  rpc.rs  service.rs  test_accounts.rs
pallets/bfc-offences/: Cargo.toml
pallets/bfc-offences/src/: lib.rs  migrations.rs  weights.rs
pallets/bfc-offences/src/pallet/: impls.rs  mod.rs
pallets/bfc-staking/: Cargo.toml
pallets/bfc-staking/src/: inflation.rs  lib.rs  migrations.rs  set.rs  weights.rs
pallets/bfc-staking/src/pallet/: impls.rs  mod.rs
pallets/bfc-utility/: Cargo.toml
pallets/bfc-utility/src/: lib.rs  migrations.rs  weights.rs
pallets/bfc-utility/src/pallet/: mod.rs
pallets/bifrost-evm-tx-payment/: Cargo.toml
pallets/blaze/: Cargo.toml
pallets/blaze/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/blaze/src/pallet/: impls.rs  mod.rs
pallets/btc-address-registrator/: Cargo.toml
pallets/btc-registration-pool/: Cargo.toml
pallets/btc-registration-pool/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/btc-registration-pool/src/pallet/: impls.rs  mod.rs
pallets/btc-socket-queue/: Cargo.toml
pallets/btc-socket-queue/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/btc-socket-queue/src/pallet/: impls.rs  mod.rs
pallets/cccp-fast-transfer/: Cargo.toml
pallets/cccp-fast-transfer/src/: lib.rs  weights.rs
pallets/cccp-fast-transfer/src/pallet/: mod.rs
pallets/cccp-relay-queue/: Cargo.toml
pallets/cccp-transfer-manager/: Cargo.toml
pallets/cccp-transfer-manager/src/: lib.rs  weights.rs
pallets/cccp-transfer-manager/src/pallet/: impls.rs  mod.rs
pallets/evm-auto-pilot/: Cargo.toml
pallets/evm-auto-pilot/src/: lib.rs  weights.rs
pallets/evm-auto-pilot/src/pallet/: impls.rs  mod.rs
pallets/oracle-registry/: Cargo.toml
pallets/oracle-registry/src/: lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/relay-manager/: Cargo.toml
pallets/relay-manager/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/relay-manager/src/pallet/: impls.rs  mod.rs
precompiles/balance/: Cargo.toml
precompiles/balance/src/: interface.sol  lib.rs
precompiles/bfc-offences/: Cargo.toml
precompiles/bfc-offences/src/: interface.sol  lib.rs  types.rs
precompiles/bfc-staking/: Cargo.toml
precompiles/bfc-staking/src/: interface.sol  lib.rs  types.rs
precompiles/bifrost-evm-tx-payment/: Cargo.toml  IBifrostTxPayment.sol
precompiles/bifrost-evm-tx-payment/src/: lib.rs
precompiles/blaze/: Cargo.toml
precompiles/blaze/src/: interface.sol  lib.rs
precompiles/btc-registration-pool/: Cargo.toml
precompiles/btc-registration-pool/src/: interface.sol  lib.rs  types.rs
precompiles/btc-socket-queue/: Cargo.toml
precompiles/btc-socket-queue/src/: interface.sol  lib.rs  types.rs
precompiles/cccp-relay-queue/: Cargo.toml  ICCCPRelayQueue.sol
precompiles/cccp-relay-queue/src/: lib.rs
precompiles/collective/: Cargo.toml
precompiles/collective/src/: interface.sol  lib.rs
precompiles/governance/: Cargo.toml
precompiles/governance/src/: interface.sol  lib.rs  types.rs
precompiles/investments/: Cargo.toml
precompiles/investments/src/: interface.sol  lib.rs
precompiles/permissions/: Cargo.toml
precompiles/permissions/src/: interface.sol  lib.rs
precompiles/pools/: Cargo.toml
precompiles/pools/src/: interface.sol  lib.rs
precompiles/relay-manager/: Cargo.toml
precompiles/utils/: Cargo.toml
primitives/account/: Cargo.toml
primitives/bfc-staking/: Cargo.toml
primitives/btc-relay/: Cargo.toml
primitives/cccp/: Cargo.toml
primitives/core/: Cargo.toml
primitives/multi-sig/: Cargo.toml
primitives/oracle/: Cargo.toml
runtime/common/: Cargo.toml
runtime/dev/: Cargo.toml  build.rs
runtime/mainnet/: Cargo.toml  build.rs
runtime/testnet/: Cargo.toml  build.rs
scripts/: build-dev-spec.sh  build-mainnet-spec.sh  build-testnet-spec.sh  init.sh  run-local-mainnet.sh  set-genesis-session-keys.sh
specs/: bifrost-dev.json  bifrost-mainnet.json  bifrost-testnet.json
src/: create_accounts.ts  join_validators.ts  set_session_keys.ts
src/scripts/: generate-session-keys.sh
tests/: .gitignore  README.md  package-lock.json  package.json  stryker.config.json  tsconfig.json
tests/benchmark/: deployERC20.ts  evm_traffic.ts  index.ts  max_gas_limit.ts  tx_traffic.ts
tests/commands/: purge_chains.ts  purge_containers.ts  rewind_node.ts  run_node.ts  set_controller.ts  set_node.ts
tests/constants/: ERC20.ts  config.ts  currency.ts  demo_contract.ts  events.ts  keys.ts  providers.ts  staking_contract.ts
tests/contracts/: CLZTest.sol
tests/docker_data/: bifrost-dev.json  docker-compose.run-test-bed.yaml  run_boot_node.sh  run_peer_node.sh
tools/: .editorconfig  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+171 files in other folders)
