[workspace]
resolver = "2"
members = [
	"node/core",
	"node/common",
	"node/dev",
	"node/testnet",
	"node/mainnet",
	"runtime/common",
	"runtime/dev",
	"runtime/testnet",
	"runtime/mainnet",
	"pallets/bfc-staking",
	"pallets/bfc-utility",
	"pallets/bfc-offences",
	"pallets/relay-manager",
	"pallets/btc-registration-pool",
	"pallets/btc-socket-queue",
	"precompiles/bfc-staking",
	"precompiles/bfc-offences",
	"precompiles/relay-manager",
	"precompiles/governance",
	"precompiles/collective",
	"precompiles/balance",
	"precompiles/btc-registration-pool",
	"precompiles/btc-socket-queue",
	"primitives/core",
	"primitives/bfc-staking",
	"primitives/btc-relay",
]
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["bifrost-platform"]
homepage = "https://www.bifrostnetwork.com"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-node"

[workspace.dependencies]
# General
substrate-fixed = { version = "0.6.0", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
	"serde",
] }
evm = { version = "0.43.4", default-features = false }
ethereum = { version = "0.18.2", default-features = false, features = [
	"with-scale",
] }
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
serde = { version = "1.0", default-features = false }
jsonrpsee = { version = "0.24.9" }
log = { version = "0.4.21", default-features = false }
miniscript = { version = "11.0.0", default-features = false, features = [
	"no-std",
] }
ethabi-decode = { version = "2.0.0", default-features = false }
hex-literal = "0.4.1"
serde_json = "1.0"
futures = "0.3.31"
tokio = "1.45.0"
array-bytes = "6.1"

# Bifrost Primitive
bp-btc-relay = { default-features = false, path = "primitives/btc-relay" }
bp-core = { default-features = false, path = "primitives/core" }
bp-staking = { default-features = false, path = "primitives/bfc-staking" }

# Bifrost Runtime
bifrost-common-constants = { default-features = false, path = "runtime/common/constants" }
bifrost-dev-constants = { default-features = false, path = "runtime/dev/constants" }
bifrost-testnet-constants = { default-features = false, path = "runtime/testnet/constants" }
bifrost-mainnet-constants = { default-features = false, path = "runtime/mainnet/constants" }
bifrost-common-runtime = { default-features = false, path = "runtime/common" }
bifrost-dev-runtime = { path = "runtime/dev" }
bifrost-testnet-runtime = { path = "runtime/testnet" }
bifrost-mainnet-runtime = { path = "runtime/mainnet" }

# Bifrost Client
bifrost-common-node = { path = "node/common" }
bifrost-dev-node = { path = "node/dev" }
bifrost-testnet-node = { path = "node/testnet" }
bifrost-mainnet-node = { path = "node/mainnet" }

# Bifrost Frame
pallet-bfc-staking = { default-features = false, path = "pallets/bfc-staking" }
pallet-bfc-utility = { default-features = false, path = "pallets/bfc-utility" }
pallet-bfc-offences = { default-features = false, path = "pallets/bfc-offences" }
pallet-relay-manager = { default-features = false, path = "pallets/relay-manager" }
pallet-btc-registration-pool = { default-features = false, path = "pallets/btc-registration-pool" }
pallet-btc-socket-queue = { default-features = false, path = "pallets/btc-socket-queue" }

# Bifrost Precompile
precompile-bfc-staking = { default-features = false, path = "precompiles/bfc-staking" }
precompile-bfc-offences = { default-features = false, path = "precompiles/bfc-offences" }
precompile-relay-manager = { default-features = false, path = "precompiles/relay-manager" }
precompile-governance = { default-features = false, path = "precompiles/governance" }
precompile-collective = { default-features = false, path = "precompiles/collective" }
precompile-balance = { default-features = false, path = "precompiles/balance" }
precompile-btc-registration-pool = { default-features = false, path = "precompiles/btc-registration-pool" }
precompile-btc-socket-queue = { default-features = false, path = "precompiles/btc-socket-queue" }

# Substrate Client
sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-client-api = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-rpc = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-transaction-pool = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-transaction-pool-api = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-chain-spec = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-consensus = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-consensus-aura = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-consensus-grandpa = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-consensus-grandpa-rpc = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-consensus-manual-seal = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-network = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-network-sync = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-executor = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-telemetry = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-basic-authorship = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
substrate-prometheus-endpoint = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sc-offchain = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }

# Cumulus
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }

# Substrate Primitive
sp-io = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-block-builder = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-blockchain = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-consensus = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-consensus-aura = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-core = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-inherents = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-offchain = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-runtime = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-session = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-std = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-transaction-pool = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-version = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-staking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-timestamp = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
sp-genesis-builder = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }

# Substrate FRAME
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-system = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-support = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-executive = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-metadata-hash-extension = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-benchmarking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-aura = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-balances = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-grandpa = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-sudo = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-timestamp = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-scheduler = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-session = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-authorship = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-utility = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-collective = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-democracy = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-membership = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-im-online = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-offences = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-treasury = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-identity = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-preimage = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-safe-mode = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
pallet-tx-pause = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }

# Substrate Builds
substrate-wasm-builder = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }
substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2503" }

# Frontier Client
fc-db = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fc-rpc = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503", features = [
	"txpool",
] }
fc-mapping-sync = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fc-rpc-core = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fc-rpc-debug = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fc-rpc-trace = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fc-api = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }

# Frontier Primitive
fp-self-contained = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-account = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-evm = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-ext = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-rpc = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-rpc-debug = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
fp-rpc-txpool = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }

# Frontier Runtime
evm-tracer = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }

# Frontier FRAME
pallet-evm = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-ethereum = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-base-fee = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-evm-precompile-bn128 = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }

# Frontier Utilities
precompile-utils = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2503" }
